--- a/romanized_nepali_classification.ipynb
+++ b/romanized_nepali_classification.ipynb
@@ -5,9 +5,7 @@
    "id": "aea2c8dd",
    "metadata": {},
    "source": [
-    "# Romanized Nepali Text Classification\n",
-    "\n",
-    "This notebook implements a comprehensive text classification system for romanized Nepali text."
+    "# Romanized Nepali Text Classification"
    ]
   },
   {
@@ -245,8 +243,6 @@
    "id": "d70b22ca",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Step 2: Data Loading and Initial Exploration"
    ]
   },
@@ -648,14 +644,6 @@
     "print(\"Statistical Summary:\")\n",
     "print(\"-\"*60)\n",
     "df.describe(include='all')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c811c45b",
-   "metadata": {},
-   "source": [
-    "### Class Distribution Analysis"
    ]
   },
   {
